--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,18 +30,22 @@ excludes=
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=I:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
+file.reference.jeoparnaire-1.0.2.jar-2=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-1=E:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-2=I:\\jcalendar-1.4\\lib\\junit-4.6.jar
+file.reference.junit-4.6.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +64,11 @@ javac.classpath=\
     ${file.reference.jgoodies-looks-2.4.1.jar-2}:\
     ${file.reference.junit-4.6.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
-    ${file.reference.jeoparnaire-1.0.2.jar-1}
+    ${file.reference.jeoparnaire-1.0.2.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-3}:\
+    ${file.reference.junit-4.6.jar-3}:\
+    ${file.reference.jeoparnaire-1.0.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
