Some changes added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/SPM_industry_training.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jar_files-iReport_Jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=I:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
@@ -68,7 +69,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${file.reference.jgoodies-looks-2.4.1.jar-3}:\
     ${file.reference.junit-4.6.jar-3}:\
-    ${file.reference.jeoparnaire-1.0.2.jar-2}
+    ${file.reference.jeoparnaire-1.0.2.jar-2}:\
+    ${file.reference.jar_files-iReport_Jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
