--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,26 +27,34 @@ dist.dir=dist
 dist.jar=${dist.dir}/SPM_industry_training.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\jar files\\itextpdf-5.4.0.jar
 file.reference.jar_files-iReport_Jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=I:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=C:\\Users\\Dell\\Documents\\jar files\\jcalendar-1.4.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-2=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jeoparnaire-1.0.2.jar
+file.reference.jeoparnaire-1.0.2.jar-3=C:\\Users\\Dell\\Documents\\jar files\\jeoparnaire-1.0.2.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-3=C:\\Users\\Dell\\Documents\\jar files\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-4=C:\\Users\\Dell\\Documents\\jar files\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-1=E:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-2=I:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
+file.reference.junit-4.6.jar-4=C:\\Users\\Dell\\Documents\\jar files\\junit-4.6.jar
+file.reference.mail.jar=C:\\Users\\Dell\\Documents\\jar files\\mail.jar
+file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\jar files\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -70,7 +78,15 @@ javac.classpath=\
     ${file.reference.jgoodies-looks-2.4.1.jar-3}:\
     ${file.reference.junit-4.6.jar-3}:\
     ${file.reference.jeoparnaire-1.0.2.jar-2}:\
-    ${file.reference.jar_files-iReport_Jar}
+    ${file.reference.jar_files-iReport_Jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-4}:\
+    ${file.reference.jeoparnaire-1.0.2.jar-3}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-3}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-4}:\
+    ${file.reference.junit-4.6.jar-4}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
