--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/SPM_industry_training.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.dsn.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\dsn.jar
+file.reference.imap.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\imap.jar
+file.reference.itextpdf-5.1.0.jar=E:\\3rd year 2nd sem\\jar_files\\itextpdf-5.1.0.jar
 file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\jar files\\itextpdf-5.4.0.jar
 file.reference.jar_files-iReport_Jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
@@ -54,7 +57,12 @@ file.reference.junit-4.6.jar-2=I:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-4=C:\\Users\\Dell\\Documents\\jar files\\junit-4.6.jar
 file.reference.mail.jar=C:\\Users\\Dell\\Documents\\jar files\\mail.jar
+file.reference.mail.jar-1=E:\\2 nd year 2 nd sem\\ITP\\ITP\\javamail-1.4.5\\mail.jar
+file.reference.mailapi.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\mailapi.jar
+file.reference.pop3.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\pop3.jar
 file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\jar files\\rs2xml.jar
+file.reference.rs2xml.jar-1=E:\\3rd year 2nd sem\\jar_files\\rs2xml.jar
+file.reference.smtp.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\smtp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -86,7 +94,15 @@ javac.classpath=\
     ${file.reference.jgoodies-looks-2.4.1.jar-4}:\
     ${file.reference.junit-4.6.jar-4}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
