--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,22 @@ dist.dir=dist
 dist.jar=${dist.dir}/SPM_industry_training.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\JAR files\\itextpdf-5.4.0.jar
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Dell\\Documents\\JAR files\\jcalendar-1.4.jar
+file.reference.jeoparnaire-1.0.2.jar=C:\\Users\\Dell\\Documents\\JAR files\\jeoparnaire-1.0.2.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-2=C:\\Users\\Dell\\Documents\\JAR files\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-2=C:\\Users\\Dell\\Documents\\JAR files\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-1=E:\\jcalendar-1.4\\lib\\junit-4.6.jar
+file.reference.junit-4.6.jar-2=C:\\Users\\Dell\\Documents\\JAR files\\junit-4.6.jar
+file.reference.mail.jar=C:\\Users\\Dell\\Documents\\JAR files\\mail.jar
+file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\JAR files\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +55,15 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jgoodies-common-1.2.0.jar-1}:\
     ${file.reference.jgoodies-looks-2.4.1.jar-1}:\
-    ${file.reference.junit-4.6.jar-1}
+    ${file.reference.junit-4.6.jar-1}:\
+    ${file.reference.itextpdf-5.4.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.jeoparnaire-1.0.2.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-2}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-2}:\
+    ${file.reference.junit-4.6.jar-2}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
