--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.jcalendar-1.4.jar-6=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\j
 file.reference.jcommon-1.0.20.jar=E:\\Projects\\Jar Files\\Charts\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-1=D:\\lib\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-2=I:\\lib\\jcommon-1.0.20.jar
+file.reference.jcommon-1.0.20.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jcommon-1.0.20.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
@@ -60,9 +61,11 @@ file.reference.jeoparnaire-1.0.2.jar-5=C:\\Users\\Ekanayaketw\\Desktop\\JAR file
 file.reference.jfreechart-1.0.16-swt.jar=E:\\Projects\\Jar Files\\Charts\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16-swt.jar-1=D:\\lib\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16-swt.jar-2=I:\\lib\\jfreechart-1.0.16-swt.jar
+file.reference.jfreechart-1.0.16-swt.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16.jar=E:\\Projects\\Jar Files\\Charts\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-1=D:\\lib\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-2=I:\\lib\\jfreechart-1.0.16.jar
+file.reference.jfreechart-1.0.16.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jfreechart-1.0.16.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
@@ -98,42 +101,42 @@ file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\JAR files\\rs2xml.jar
 
 file.reference.dsn.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\dsn.jar
 file.reference.imap.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\imap.jar
-file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\jar files\\itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\JAR files\\itextpdf-5.4.0.jar
 file.reference.itextpdf-5.4.0.jar-1=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\itextpdf-5.4.0.jar
 file.reference.jar_files-iReport_Jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar
 file.reference.jcalendar-1.4.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=I:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-4=C:\\Users\\Dell\\Documents\\jar files\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=C:\\Users\\Dell\\Documents\\JAR files\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-5=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\jcalender-1.4\\jcalendar-1.4.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-2=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jeoparnaire-1.0.2.jar
-file.reference.jeoparnaire-1.0.2.jar-3=C:\\Users\\Dell\\Documents\\jar files\\jeoparnaire-1.0.2.jar
+file.reference.jeoparnaire-1.0.2.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-4=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\jeoparnaire-1.0.2.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
-file.reference.jgoodies-common-1.2.0.jar-3=C:\\Users\\Dell\\Documents\\jar files\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-4=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
-file.reference.jgoodies-looks-2.4.1.jar-4=C:\\Users\\Dell\\Documents\\jar files\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-4=C:\\Users\\Dell\\Documents\\JAR files\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-5=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-1=E:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-2=I:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-3=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
-file.reference.junit-4.6.jar-4=C:\\Users\\Dell\\Documents\\jar files\\junit-4.6.jar
+file.reference.junit-4.6.jar-4=C:\\Users\\Dell\\Documents\\JAR files\\junit-4.6.jar
 file.reference.junit-4.6.jar-5=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\junit-4.6.jar
-file.reference.mail.jar=C:\\Users\\Dell\\Documents\\jar files\\mail.jar
+file.reference.mail.jar=C:\\Users\\Dell\\Documents\\JAR files\\mail.jar
 file.reference.mailapi.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\mailapi.jar
 file.reference.pop3.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\pop3.jar
-file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\jar files\\rs2xml.jar
+file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\JAR files\\rs2xml.jar
 file.reference.rs2xml.jar-1=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\rs2xml.jar
 file.reference.rs2xml.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\rs2xml.jar
 file.reference.smtp.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\smtp.jar
@@ -179,7 +182,18 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.16.jar-1}:\
     ${file.reference.jcommon-1.0.20.jar-2}:\
     ${file.reference.jfreechart-1.0.16-swt.jar-2}:\
-    ${file.reference.jfreechart-1.0.16.jar-2}
+    ${file.reference.jfreechart-1.0.16.jar-2}:\
+    ${file.reference.itextpdf-5.4.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-4}:\
+    ${file.reference.jeoparnaire-1.0.2.jar-3}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-3}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-4}:\
+    ${file.reference.junit-4.6.jar-4}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jcommon-1.0.20.jar-3}:\
+    ${file.reference.jfreechart-1.0.16-swt.jar-3}:\
+    ${file.reference.jfreechart-1.0.16.jar-3}
     ${file.reference.itextpdf-5.4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
