--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.itextpdf-5.4.0.jar=I:\\JAR files\\itextpdf-5.4.0.jar
 file.reference.itextpdf-5.4.0.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\itextpdf-5.4.0.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-5.6.0.jar
 file.reference.jasperreports-chart-themes-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-chart-themes-5.6.0.jar
+file.reference.jasperreports-chart-themes-5.6.0.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jasperreports-chart-themes-5.6.0.jar
 file.reference.jasperreports-core-renderer.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-core-renderer.jar
 file.reference.jasperreports-extensions-3.5.3.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-extensions-3.5.3.jar
 file.reference.jasperreports-fonts-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-fonts-5.6.0.jar
@@ -53,6 +54,7 @@ file.reference.jcommon-1.0.20.jar=E:\\Projects\\Jar Files\\Charts\\jcommon-1.0.2
 file.reference.jcommon-1.0.20.jar-1=D:\\lib\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-2=I:\\lib\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jcommon-1.0.20.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Ekanayaketw\\Downloads\\iReport-5.1.0-plugin\\jar_files\\jcommon-1.0.23.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
@@ -66,6 +68,7 @@ file.reference.jfreechart-1.0.16.jar=E:\\Projects\\Jar Files\\Charts\\jfreechart
 file.reference.jfreechart-1.0.16.jar-1=D:\\lib\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-2=I:\\lib\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jfreechart-1.0.16.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Ekanayaketw\\Downloads\\iReport-5.1.0-plugin\\jar_files\\jfreechart-1.0.19.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
@@ -193,7 +196,10 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.jcommon-1.0.20.jar-3}:\
     ${file.reference.jfreechart-1.0.16-swt.jar-3}:\
-    ${file.reference.jfreechart-1.0.16.jar-3}
+    ${file.reference.jfreechart-1.0.16.jar-3}:\
+    ${file.reference.jasperreports-chart-themes-5.6.0.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
     ${file.reference.itextpdf-5.4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
