--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 compile.on.save=true
+file.reference.jcommon-1.0.23.jar=E:\\jar\\jar files\\rs2xml.jar
 file.reference.jeoparnaire-1.0.2.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
 user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
-user.properties.file=C:\\Users\\Ekanayaketw\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\FC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
