--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,4 @@ compile.on.save=true
 file.reference.jeoparnaire-1.0.2.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
 user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
-user.properties.file=C:\\Users\\Ekanayaketw\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
