--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -145,6 +145,7 @@ file.reference.rs2xml.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\rs2xml.j
 file.reference.smtp.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\smtp.jar
 
 
+file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -199,7 +200,8 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.16.jar-3}:\
     ${file.reference.jasperreports-chart-themes-5.6.0.jar-1}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
     ${file.reference.itextpdf-5.4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
