Sent Email successfully

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SPM_industry_training
+application.vendor=user
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +27,27 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SPM_industry_training.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 
+file.reference.activation.jar=C:\\Users\\user\\Downloads\\jaf-1.1.1\\activation.jar
 file.reference.com-jaspersoft-ireport-components.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-ireport-components.jar
 file.reference.com-jaspersoft-ireport-jasperserver.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-ireport-jasperserver.jar
 file.reference.com-jaspersoft-ireport.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-ireport.jar
 file.reference.com-jaspersoft-jrx.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-jrx.jar
 file.reference.itextpdf-5.4.0.jar=I:\\JAR files\\itextpdf-5.4.0.jar
 file.reference.itextpdf-5.4.0.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar-3=F:\\JAR files\\itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar-4=C:\\Users\\user\\Desktop\\JAR files\\itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar.zip=F:\\JAR files\\itextpdf-5.4.0.jar.zip
+file.reference.itextpdf-5.4.0.jar.zip-1=C:\\Users\\user\\Desktop\\JAR files\\itextpdf-5.4.0.jar.zip
+file.reference.JAR_files-javamail-1.4.5=F:\\JAR files\\javamail-1.4.5
+file.reference.JAR_files-javamail-1.4.5-1=C:\\Users\\user\\Desktop\\JAR files\\javamail-1.4.5
+file.reference.jar_files.zip=F:\\JAR files\\jar files.zip
+file.reference.jar_files.zip-1=C:\\Users\\user\\Desktop\\JAR files\\jar files.zip
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-5.6.0.jar
+file.reference.jasperreports-6.3.1.jar=F:\\JAR files\\jasperreports-6.3.1.jar
+file.reference.jasperreports-6.3.1.jar-1=C:\\Users\\user\\Desktop\\JAR files\\jasperreports-6.3.1.jar
 file.reference.jasperreports-chart-themes-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-chart-themes-5.6.0.jar
 file.reference.jasperreports-chart-themes-5.6.0.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jasperreports-chart-themes-5.6.0.jar
 file.reference.jasperreports-core-renderer.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-core-renderer.jar
@@ -50,39 +63,61 @@ file.reference.jcalendar-1.4.jar-1=E:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=I:\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=I:\\JAR files\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-6=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-7=F:\\JAR files\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-8=C:\\Users\\user\\Desktop\\JAR files\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.20.jar=E:\\Projects\\Jar Files\\Charts\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-1=D:\\lib\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-2=I:\\lib\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.20.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jcommon-1.0.20.jar
+file.reference.jcommon-1.0.20.jar-4=F:\\JAR files\\jcommon-1.0.20.jar
+file.reference.jcommon-1.0.20.jar-5=C:\\Users\\user\\Desktop\\JAR files\\jcommon-1.0.20.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\Ekanayaketw\\Downloads\\iReport-5.1.0-plugin\\jar_files\\jcommon-1.0.23.jar
+file.reference.jdatepicker-1.3.4.jar=F:\\JAR files\\jdatepicker-1.3.4.jar
+file.reference.jdatepicker-1.3.4.jar-1=C:\\Users\\user\\Desktop\\JAR files\\jdatepicker-1.3.4.jar
 file.reference.jeoparnaire-1.0.2.jar=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar=G:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-1=I:\\jar_files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-2=I:\\JAR files\\jeoparnaire-1.0.2.jar
 file.reference.jeoparnaire-1.0.2.jar-5=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\jeoparnaire-1.0.2.jar
+file.reference.jeoparnaire-1.0.2.jar-6=F:\\JAR files\\jeoparnaire-1.0.2.jar
+file.reference.jeoparnaire-1.0.2.jar-7=C:\\Users\\user\\Desktop\\JAR files\\jeoparnaire-1.0.2.jar
 file.reference.jfreechart-1.0.16-swt.jar=E:\\Projects\\Jar Files\\Charts\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16-swt.jar-1=D:\\lib\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16-swt.jar-2=I:\\lib\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16-swt.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jfreechart-1.0.16-swt.jar
+file.reference.jfreechart-1.0.16-swt.jar-4=F:\\JAR files\\jfreechart-1.0.16-swt.jar
+file.reference.jfreechart-1.0.16-swt.jar-5=C:\\Users\\user\\Desktop\\JAR files\\jfreechart-1.0.16-swt.jar
 file.reference.jfreechart-1.0.16.jar=E:\\Projects\\Jar Files\\Charts\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-1=D:\\lib\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-2=I:\\lib\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.16.jar-3=C:\\Users\\Dell\\Documents\\JAR files\\jfreechart-1.0.16.jar
+file.reference.jfreechart-1.0.16.jar-4=F:\\JAR files\\jfreechart-1.0.16.jar
+file.reference.jfreechart-1.0.16.jar-5=C:\\Users\\user\\Desktop\\JAR files\\jfreechart-1.0.16.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\Ekanayaketw\\Downloads\\iReport-5.1.0-plugin\\jar_files\\jfreechart-1.0.19.jar
 file.reference.jgoodies-common-1.2.0.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-common-1.2.0.jar-3=I:\\JAR files\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-5=F:\\JAR files\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-6=C:\\Users\\user\\Desktop\\JAR files\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-1=E:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-2=I:\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.jgoodies-looks-2.4.1.jar-3=I:\\JAR files\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-6=F:\\JAR files\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-7=C:\\Users\\user\\Desktop\\JAR files\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=E:\\2 nd year 2 nd sem\\ITP\\ITP\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-1=E:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-2=I:\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.junit-4.6.jar-3=I:\\JAR files\\junit-4.6.jar
+file.reference.junit-4.6.jar-6=F:\\JAR files\\junit-4.6.jar
+file.reference.junit-4.6.jar-7=C:\\Users\\user\\Desktop\\JAR files\\junit-4.6.jar
 file.reference.mail.jar=I:\\JAR files\\mail.jar
 file.reference.mail.jar-1=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\mail.jar
+file.reference.mail.jar-2=F:\\JAR files\\mail.jar
+file.reference.mail.jar-3=F:\\JAR files\\javamail-1.4.5\\mail.jar
+file.reference.mail.jar-4=C:\\Users\\user\\Desktop\\JAR files\\mail.jar
+file.reference.mail.jar-5=C:\\Users\\user\\Downloads\\javamail-1.4.7\\mail.jar
 file.reference.rs2xml.jar=I:\\JAR files\\rs2xml.jar
 
 file.reference.itextpdf-5.4.0.jar=C:\\Users\\Dell\\Documents\\JAR files\\itextpdf-5.4.0.jar
@@ -142,6 +177,8 @@ file.reference.pop3.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javam
 file.reference.rs2xml.jar=C:\\Users\\Dell\\Documents\\JAR files\\rs2xml.jar
 file.reference.rs2xml.jar-1=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\rs2xml.jar
 file.reference.rs2xml.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\rs2xml.jar
+file.reference.rs2xml.jar-3=F:\\JAR files\\rs2xml.jar
+file.reference.rs2xml.jar-4=C:\\Users\\user\\Desktop\\JAR files\\rs2xml.jar
 file.reference.smtp.jar=E:\\SLIIT\\3rd year\\2nd semester\\SPM\\jar files\\javamail-1.4.5\\lib\\smtp.jar
 
 
@@ -199,7 +236,42 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.16.jar-3}:\
     ${file.reference.jasperreports-chart-themes-5.6.0.jar-1}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar-3}:\
+    ${file.reference.itextpdf-5.4.0.jar.zip}:\
+    ${file.reference.jar_files.zip}:\
+    ${file.reference.jasperreports-6.3.1.jar}:\
+    ${file.reference.JAR_files-javamail-1.4.5}:\
+    ${file.reference.jcalendar-1.4.jar-7}:\
+    ${file.reference.jcommon-1.0.20.jar-4}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jeoparnaire-1.0.2.jar-6}:\
+    ${file.reference.jfreechart-1.0.16-swt.jar-4}:\
+    ${file.reference.jfreechart-1.0.16.jar-4}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-5}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-6}:\
+    ${file.reference.junit-4.6.jar-6}:\
+    ${file.reference.mail.jar-2}:\
+    ${file.reference.rs2xml.jar-3}:\
+    ${file.reference.mail.jar-3}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar-4}:\
+    ${file.reference.itextpdf-5.4.0.jar.zip-1}:\
+    ${file.reference.jar_files.zip-1}:\
+    ${file.reference.jasperreports-6.3.1.jar-1}:\
+    ${file.reference.JAR_files-javamail-1.4.5-1}:\
+    ${file.reference.jcalendar-1.4.jar-8}:\
+    ${file.reference.jcommon-1.0.20.jar-5}:\
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.jeoparnaire-1.0.2.jar-7}:\
+    ${file.reference.jfreechart-1.0.16-swt.jar-5}:\
+    ${file.reference.jfreechart-1.0.16.jar-5}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-6}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-7}:\
+    ${file.reference.junit-4.6.jar-7}:\
+    ${file.reference.mail.jar-4}:\
+    ${file.reference.rs2xml.jar-4}:\
+    ${file.reference.mail.jar-5}
     ${file.reference.itextpdf-5.4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
