--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,8 +32,11 @@ file.reference.com-jaspersoft-ireport-components.jar=C:\\Users\\Ekanayaketw\\Dow
 file.reference.com-jaspersoft-ireport-jasperserver.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-ireport-jasperserver.jar
 file.reference.com-jaspersoft-ireport.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-ireport.jar
 file.reference.com-jaspersoft-jrx.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\com-jaspersoft-jrx.jar
+file.reference.itext-4.2.0.jar=E:\\JAR files\\itext-4.2.0.jar
+file.reference.itextpdf-5.1.0.jar=E:\\JAR files\\itextpdf-5.1.0.jar
 file.reference.itextpdf-5.4.0.jar=I:\\JAR files\\itextpdf-5.4.0.jar
 file.reference.itextpdf-5.4.0.jar-2=C:\\Users\\Ekanayaketw\\Desktop\\JAR files\\itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar-3=E:\\JAR files\\itextpdf-5.4.0.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-5.6.0.jar
 file.reference.jasperreports-chart-themes-5.6.0.jar=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\iReport Jar\\jasperreports-chart-themes-5.6.0.jar
 file.reference.jasperreports-chart-themes-5.6.0.jar-1=C:\\Users\\Ekanayaketw\\Downloads\\jar_files\\jasperreports-chart-themes-5.6.0.jar
@@ -201,7 +204,10 @@ javac.classpath=\
     ${file.reference.jasperreports-chart-themes-5.6.0.jar-1}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar-3}:\
+    ${file.reference.itext-4.2.0.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}
     ${file.reference.itextpdf-5.4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jeoparnaire-1.0.2.jar}:\
